<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_activity"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.SwitchCompat
            android:buttonTint="@color/backgourd_color_btn"
            android:id="@+id/switch_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/change_interface" />

        <ImageButton
            android:id="@+id/imgbtn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:src="@drawable/ic_add" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/rl_top"
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textColor="@color/text_color_btn"
            android:background="@color/backgourd_color_btn"
            android:id="@+id/btn_delete"
            android:text="@string/btn_delete_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:textColor="@color/text_color_btn"
            android:background="@color/backgourd_color_btn"
            android:id="@+id/btn_cancel"
            android:layout_alignParentRight="true"
            android:text="@string/btn_cancel_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>